[gd_scene load_steps=8 format=3 uid="uid://qs8a0ukoykpy"]

[ext_resource type="Script" uid="uid://od6ob0er52am" path="res://src/core/scenes/mobs/simple_mob/simple_mob.gd" id="1_7r82u"]
[ext_resource type="PackedScene" uid="uid://wa32nukf0imn" path="res://src/game/scenes/characters/ghost/ghost_visual.tscn" id="1_wq31s"]
[ext_resource type="Resource" uid="uid://6y35ajb0gtmp" path="res://src/game/scenes/characters/ghost/ghost_simple_mob_res.tres" id="2_urudi"]
[ext_resource type="Script" uid="uid://dudwk2sg8fkhl" path="res://src/core/components/health/statpool.gd" id="3_kpgxx"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wq31s"]
radius = 0.20361328
height = 0.76284766

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_urudi"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_urudi"]
radius = 0.25634766
height = 0.76284766

[node name="SimpleMob" type="CharacterBody3D" groups=["mobs"]]
collision_layer = 2
collision_mask = 19
script = ExtResource("1_7r82u")
_simple_mob = ExtResource("2_urudi")

[node name="Label3D" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0627441, 0)
billboard = 1
text = "Name"

[node name="VisualRoot" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="character-ghost2" parent="VisualRoot" instance=ExtResource("1_wq31s")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.38642383, 0)
shape = SubResource("CapsuleShape3D_wq31s")

[node name="HealthPool" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_kpgxx")
_max_statpool_value = 3
metadata/_custom_type_script = "uid://dudwk2sg8fkhl"

[node name="DebugInfo" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="DebugInfo"]
offset_right = 193.0
offset_bottom = 230.0
theme_override_styles/panel = SubResource("StyleBoxFlat_urudi")

[node name="VBoxContainer" type="VBoxContainer" parent="DebugInfo/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="DebugInfo/Panel/VBoxContainer"]
layout_mode = 2
text = "Name:"

[node name="Hurtbox" type="Area3D" parent="."]
collision_layer = 2
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.386, 0)
shape = SubResource("CapsuleShape3D_urudi")
